Added Date and Time picker widgets for the date/time input fields.

--- a/css/style.less
+++ b/css/style.less
@@ -705,6 +705,10 @@ body {
 	.full { width: 100%; display: block; }
 	.columns-btn.opened .dropdown-menu.stayopen { display: block; }
 	.columns-btn.open .dropdown-menu { display: none; }
+	.timepicker, .datepicker {
+		.add-on { cursor: pointer; }
+	}
+	.bootstrap-datetimepicker-widget { z-index: 10000; }
 }
 
 /***** BOOTSTRAP DEFAULT OVERRIDES *****/
